@@ -1,6 +1,6 @@
 $Author: Mihai Şucan $
 $URL: http://code.google.com/p/paintweb $
-$Date: 2009-07-10 20:12:19 +0300 $
+$Date: 2009-07-20 20:17:16 +0300 $
 
 Until the end of GSOC:
 
@@ -26,6 +26,10 @@ As quick as possible, after GSOC 2009:
 - write more tutorials/articles about paintweb.
 - new tools: bucket, pencil v2 (avec pression).
 - toolRegister creates instances of tool objects automatically.
+  - cleanup interface script from having hard-coded stuff related to tools.
+- investigate the use of an iframe to hold the whole PaintWeb interface because 
+I can have style sandboxing and other advantages.
+- allow integration by specifying a form input to replace.
 - viewport resize handle.
 - double-click on the tab bar to hide its content and only show a minimal list 
 of tabs.
