@@ -6,11 +6,12 @@
     <link rel="author" type="text/html" href="http://www.robodesign.ro" 
     title="Marius and Mihai Şucan, ROBO Design">
     <!-- $URL: http://code.google.com/p/paintweb $
-         $Date: 2009-07-17 22:28:52 +0300 $ -->
+         $Date: 2009-07-20 14:26:57 +0300 $ -->
 
-    <!-- This demo requires you to have TinyMCE. -->
+    <!-- This demo requires you to have TinyMCE. Please point to your TinyMCE 
+    3 installation. -->
     <script type="text/javascript" 
-      src="../../tinymce/jscripts/tiny_mce/tiny_mce_src.js"></script>
+      src="../../tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
     <script type="text/javascript"><!--
 tinyMCE.init({
   mode: "textareas",
@@ -20,7 +21,7 @@ tinyMCE.init({
   paintweb_config : {
     configFile: "config-example.json",
     tinymce: {
-      paintwebFolder: "../src/",
+      paintwebFolder: "../build/",
       imageSaveDataURI: true,
       overlayButton: true,
       contextMenuItem: true,
