@@ -1,5 +1,5 @@
 {
-  // $Date: 2009-07-16 13:59:30 +0300 $
+  // $Date: 2009-07-20 22:23:58 +0300 $
 
   /**
    * The list of available languages. This associated language IDs to their 
@@ -8,7 +8,14 @@
    * @type Object
    */
   "languages": {
-    "en": "English"
+    // Besides the language title, you may also tell the file name. The language 
+    // file will be loaded from the langFolder you specify below. If no 'file' 
+    // is given, then the language ID is used, with the '.json' string appended.
+    "en": { "title": "English" },
+    "moodle": {
+      "title": "The current Moodle language",
+      "file" : "moodle.php"
+    }
   },
 
   /**
@@ -17,7 +24,7 @@
    * @type String
    * @default "en"
    */
-  "lang": "en",
+  "lang": "moodle",
 
   /**
    * The folder which holds the language files.
