@@ -3,7 +3,10 @@ tinyMCE.addI18n('en.paintweb',{
   overlayButton: 'Edit',
 	contextMenuEdit: 'Edit the image in PaintWeb',
   loading: 'PaintWeb is loading...',
-  statusImageEditing: 'You are editing "%file%".',
+  statusImageEditing: 'You are editing %file%.',
+  statusEditingDataURI: 'You are editing a local data URI.',
   imageSaveButton: 'Save',
-  cancelButton: 'Cancel'
+  imageSaveButtonTitle: 'Save the image and return to TinyMCE.',
+  cancelButton: 'Cancel',
+  cancelButtonTitle: 'Cancel image edits and return to TinyMCE.',
 });
