@@ -1,5 +1,5 @@
 {
-  // $Date: 2009-07-09 15:05:04 +0300 $
+  // $Date: 2009-07-20 22:44:16 +0300 $
   // TODO: try jsdoc-toolkit on this json (!)
 
   /**
@@ -9,7 +9,10 @@
    * @type Object
    */
   "languages": {
-    "en": "English"
+    // Besides the language title, you may also tell the file name. The language 
+    // file will be loaded from the langFolder you specify below. If no 'file' 
+    // is given, then the language ID is used, with the '.json' string appended.
+    "en": { "title": "English" }
   },
 
   /**
